<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Homework</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="copy">Copy</string>
    <string name="cover">cover</string>
    <string name="cut">Cut</string>
    <string name="default_application">Not appointed by default application</string>
    <string name="delete">Delete</string>
    <string name="detail">Detail</string>
    <string name="go">Go</string>
    <string name="hello">Hello World, HomeworkActivity!</string>
    <string name="home">Home</string>
    <string name="launcheractivity_title_text">Welcome Deer T7</string>
    <string name="library">Library</string>
    <string name="new_extension">New Extension</string>
    <string name="next">next</string>
    <string name="no">no</string>
    <string name="unable_open_file">unable to open this type of file</string>
    <string name="page">page</string>
    <string name="paste">Paste</string>
    <string name="path">Path</string>
    <string name="paths">>>></string>
    <string name="previous">previous</string>
    <string name="search">search</string>
    <string name="search_hint">Searching…</string>
    <string name="search_result">Search result.</string>
    <string name="set">Set</string>
    <string name="slash">/</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="title">title</string>
    <string name="unknown">unknown</string>
    <string name="yes">Yes</string>
    <string name="checkbox_text">Use by default for this action.</string>
    <string name="copying">Copying: </string>
    <string name="deletefile_text">delete: </string>
    <string name="deletefile_title">delete file</string>
    <string name="dialogformatflash_message">Do you want to format internal flast, it will erase all date on flast?</string>
    <string name="dialogrename_name">Name:</string>
    <string name="dialogrename_rename_text">rename: </string>
    <string name="dialogrename_text">rename: </string>
    <string name="dialogrename_title">rename</string>
    <string name="dialogpaged_skip">skip:</string>
    <string name="dialogprogressbar_init_text">Calculate the number of documents.</string>
    <string name="edittext_hint"></string>
    <string name="newfile_text">File Name: </string>
    <string name="newfile_title">New File</string>
    <string name="newfolder_text">Folder Name: </string>
    <string name="newfolder_title">New Folder</string>
    <string name="openlist_title">Complete action using</string>
    <string name="open_with">Open With</string>
    <string name="paged_init_text">1/1</string>
    <string name="property">property</string>
    <string name="bytes"> bytes</string>
    <string name="hint"></string>
    <string name="symbol_sort_by">sort by</string>
    <string name="order_asc">ASC</string>
    <string name="order_desc">DESC</string>
    <string name="recent_reading_remove_title">remove reading record</string>
    <string name="recent_reading_remove_file_on_disk">remove file on disk?</string>   
    <string name="file_property_name">Name:</string>
    <string name="file_property_title">Title:</string>
    <string name="file_property_authors">Author(s):</string>
    <string name="file_property_author_sort">Author Sort:</string>
    <string name="file_property_rating">Rating:</string>
    <string name="file_property_publisher">Publisher:</string>
    <string name="file_property_tags">Tags:</string>
    <string name="file_property_series">Series:</string>
    <string name="file_property_isbn">ISBN:</string>
    <string name="file_property_date">Date:</string>
    <string name="file_property_published">Published:</string>
    <string name="file_property_available_formats">Available Formats:</string>
    <string name="file_property_size">Size:</string>
    <string name="file_property_description">Description:</string>
    <string name="By_Name">By Name</string>
    <string name="By_Type">By Type</string>
    <string name="By_Size">By Size</string>
    <string name="By_Access_Time">By Access Time</string>
    <string name="Wireless_networks">Wireless &amp; networks</string>
    <string name="Power_Management">Power Management</string>
    <string name="Format_Flash">Format Flash</string>
    <string name="Privacy">Privacy</string>
    <string name="Stylus_Calibration">Stylus Calibration</string>
    <string name="About_phone">About phone</string>
    <string name="Time_Zone">Time Zone</string>
    <string name="Language">Language</string>
    <string name="Date">Date</string>
    <string name="Default_Font">Default Font</string>
    <string name="Application_Settings">Application Settings</string>
    <string name="Preferred_Applications">Preferred Applications</string>
    <string name="Startup_Settings">Startup Settings</string>
    <string name="Screen_Update">Screen Update</string>
    <string name="Web_Sites">Web Sites</string>
    <string name="Applications">Applications</string>
    <string name="Settings">Settings</string>
    <string name="Storage">Storage</string>
    <string name="Recent_Documents">Recent Documents</string>
    <string name="Dictionary">Dictionary</string>
    <string name="Scribble">Scribble</string>
    <string name="Notes">Notes</string>
    <string name="Go_up">Go up</string>
    <string name="Desktop">Desktop</string>
    <string name="files"> files</string>
    <string name="rename_failed">rename failed</string>
    <string name="Warning">Warning</string>
    <string name="Exceed_the_total_number_of_pages">Exceed the total number of pages</string>
    <string name="Please_enter_the_number">Please enter the number</string>
    <string name="Settings_preferred_applications">Settings preferred applications</string>
    <string name="Successfully_set">Successfully set</string>
    <string name="Fail_set">Fail set</string>
    <string name="Successfully_remove">Successfully remove</string>
    <string name="Fail_remove">Fail remove</string>
    <string name="Remove_record ">Remove record </string>
    <string name="Remove ">Remove </string>
    <string name="records"> records</string>
    <string name="Delete">Delete </string>
    <string name="sOmit">Omit</string>
    <string name="The_copy_is_fail">The copy is fail !</string>
    <string name="The_copy_is_complete">The copy is complete</string>
    <string name="SD_card_has_been_removed">SD card has been removed</string>
    <string name="file_not_exist">file not exist: </string>
    <string name="unable_to_open_this_type_of_file">unable to open this type of file</string>
    <string name="can_rename_only_one_item_at_one_time">can rename only one item at one time</string>
    <string name="more_than_1_item">more than 1 item</string>
    <string name="Succeed_setting">Succeed setting</string>
    <string name="Fail_setting">Fail setting</string>
    <string name="Cut_fail">Cut fail</string>
    <string name="delete_fail">delete fail</string>
    <string name="Screen_Rotation">Screen Rotation</string>
    <string name="Safely_Remove_SD">Safely Remove SD</string>
    <string name="Search">Search</string>
    <string name="Exit">Exit</string>
    <string name="select_mutiple">select mutiple</string>
    <string name="Others">Others</string>
    <string name="running">running&#8230;</string>
    <string name="ShortCuts">ShortCuts</string>
    <string name="Image">Image</string>
    <string name="Music">Music</string>
    <string name="Favorite">Favorite</string>
    <string name="Books">Books</string>
    
    <string name="menu_suite_file">File</string>
    <string name="menu_file_new">New File</string>
    <string name="menu_file_new_folder">New Folder</string>
    <string name="menu_file_rename">Rename</string>
    <string name="menu_file_copy">Copy</string>
    <string name="menu_file_cut">Cut</string>
    <string name="menu_file_remove">Delete</string>
    <string name="menu_file_property">Property</string>
    <string name="menu_file_goto_folder">Goto Folder</string>
    
    <string name="menu_suite_system">System</string>
    <string name="menu_system_notification">Notifications</string>
    <string name="more">more</string>
    <string name="book_mark">BookMark</string>
    <string name="recent_document">Recent Document</string>

    <string name="home_image_button">Home</string>
    <string name="sort_image_button">Sort</string>
    <string name="view_model_button">View Change</string>
    <string name="tag_image_button">Tag</string>
    
</resources>