<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:minWidth="290dp"
  android:orientation="vertical"
  android:gravity="center">
    <RelativeLayout 
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
    >
       <ImageView 
        android:id="@+id/imageview_rename_title"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_more"
        android:contentDescription="@string/title" />
    <TextView 
        android:id="@+id/textview_rename_title"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:text="@string/dialogrename_title" 
        android:textColor="@android:color/primary_text_light" 
        android:gravity="center_vertical"
        android:layout_toRightOf="@id/imageview_rename_title"
        android:layout_alignTop="@id/imageview_rename_title"
        android:layout_alignBottom="@id/imageview_rename_title" />
    </RelativeLayout>
    <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:paddingTop="2dp"
       android:paddingBottom="2dp"
    >
    <TextView 
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="20dp"
       android:text="@string/dialogrename_name"
       android:singleLine="true"
    />
    <TextView 
       android:id="@+id/textview_currentname"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:textSize="20dp"
       android:singleLine="true"
    />
    </LinearLayout>
    <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:paddingTop="2dp"
       android:paddingBottom="2dp"
    >
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialogrename_rename_text"
        android:textSize="20dp"
        android:singleLine="true"
    />
    <EditText 
        android:id="@+id/edittext_rename"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:hint="@string/edittext_hint"
        android:singleLine="true"
        android:background="@drawable/edittext_background"
        android:paddingTop="2dp"
        android:paddingBottom="2dp" 
        android:paddingLeft="1dp"
        android:paddingRight="1dp" 
        android:textSize="20dp" />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
    >
        <Button 
            android:id="@+id/button_set_rename" 
            android:layout_width="120dp"
            android:layout_height="wrap_content" 
            android:text="@string/set"
            android:background="@drawable/button_background"
            android:layout_margin="5dp" 
            android:paddingTop="3dp"
            android:paddingBottom="3dp" />
        <Button 
            android:id="@+id/button_cancel_rename"
            android:layout_width="120dp" 
            android:layout_height="wrap_content"
            android:text="@string/cancel" 
            android:background="@drawable/button_background"
            android:layout_margin="5dp" 
            android:paddingTop="3dp"
            android:paddingBottom="3dp" />
    </LinearLayout>
</LinearLayout>
