<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="290dp"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/title"
            android:src="@android:drawable/ic_menu_more" />

        <TextView
            android:id="@+id/textview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/imageview_title"
            android:layout_alignTop="@id/imageview_title"
            android:layout_toRightOf="@id/imageview_title"
            android:gravity="center_vertical"
            android:text="@string/openlist_title"
            android:textColor="@android:color/primary_text_light" />
    </RelativeLayout>

    <com.onyx.android.sdk.ui.OnyxGridView
        android:id="@+id/gridview_openlist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:background="#FFFFFF" />

    <CheckBox
        android:id="@+id/checkbox_default_open"
        style="@style/checkbox_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:singleLine="true"
        android:text="@string/checkbox_text"
        android:textColor="@android:color/primary_text_light" />

    <LinearLayout
        android:id="@+id/layout_dialog_application"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="2dp"
        android:gravity="center" >

        <Button
            android:id="@+id/button_prev"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="@string/previous" />

        <TextView
            android:id="@+id/textview_dialog_application_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minWidth="50dp"
            android:text="@string/paged_init_text"
            android:textColor="@android:color/primary_text_light" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="@string/next" />
    </LinearLayout>

</LinearLayout>