<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_pages_seekbar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/dialogpaged_skip"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/edittext_pages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="70dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/edittext_background"
            android:editable="false"
            android:hint="@string/edittext_hint"
            android:lines="1"
            android:numeric="integer"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/slash"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textview_allpage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/page"
            android:textColor="#000000" />

        <Button
            android:id="@+id/button_skip_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/button_background_skip_page"
            android:gravity="center"
            android:minWidth="40dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/go" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekbar_page"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:focusable="false"
        android:progressDrawable="@drawable/seekbar_color"
        android:thumb="@null" />
    
</LinearLayout>