<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/title"
            android:src="@android:drawable/ic_menu_more" />

        <TextView
            android:id="@+id/textview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/imageview_title"
            android:layout_alignTop="@id/imageview_title"
            android:layout_toRightOf="@id/imageview_title"
            android:gravity="center_vertical"
            android:textColor="@android:color/primary_text_light" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_previous_dialogpaged"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="@string/previous" />

        <TextView
            android:id="@+id/textview_paged_dialogpaged"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:minWidth="50dp"
            android:text="@string/paged_init_text"
            android:textColor="@android:color/primary_text_light" />

        <Button
            android:id="@+id/button_next_dialogpaged"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button_background"
            android:gravity="center"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="@string/next" />
    </LinearLayout>

    <com.onyx.android.sdk.ui.OnyxGridView
        android:id="@+id/gridview_dialogpaged"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:background="#FFFFFF" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_set_dialogpaged"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button_background"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="@string/set" />

        <Button
            android:id="@+id/button_cancel_dialogpaged"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button_background"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>