<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageview_formatflash_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_dialog_alert"
            android:contentDescription="@string/title" />

        <TextView
            android:id="@+id/textview_formatflash_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/imageview_formatflash_title"
            android:layout_alignTop="@id/imageview_formatflash_title"
            android:layout_toRightOf="@id/imageview_formatflash_title"
            android:gravity="center_vertical"
            android:textColor="@android:color/primary_text_light" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textview_formatflash_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialogformatflash_message"
        android:textSize="18dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_yes_formatflash"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button_background"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="@string/yes" />

        <Button
            android:id="@+id/button_no_formatflash"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/button_background"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="@string/no" />
    </LinearLayout>

</LinearLayout>