<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#999999"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/imageview_main_title"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/title"
            android:src="@drawable/title_left" />

        <Button
            android:id="@+id/button_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background_onyxpathindicator"
            android:minHeight="25dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/home"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button_sort_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="5dp"
            android:layout_toLeftOf="@id/button_home"
            android:background="@drawable/button_background_onyxpathindicator"
            android:minHeight="25dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/symbol_sort_by"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button_change_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="5dp"
            android:layout_toLeftOf="@id/button_sort_by"
            android:background="@drawable/button_background_onyxpathindicator"
            android:minEms="5"
            android:minHeight="25dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/detail"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textview_main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/imageview_main_title"
            android:layout_alignTop="@id/imageview_main_title"
            android:layout_toLeftOf="@id/button_change_view"
            android:layout_toRightOf="@id/imageview_main_title"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/launcheractivity_title_text"
            android:textColor="#FFFFFF"
            android:textSize="15dp" />
    </RelativeLayout>

    <com.onyx.android.launcher.view.OnyxFileGridView
        android:id="@+id/gridview_recent_documents"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_title" />

</RelativeLayout>